[워들] 로직 완성
간단한 워들을 만들었습니다.

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,16 @@ main {
   gap: 5px;
 }
 
-.board-block {
+.board-column {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid #d3d6da;
+  width: 60px;
+  height: 60px;
+}
+
+.keyboard-column {
   display: flex;
   justify-content: center;
   align-items: center;
